website/code/revcomp-gcj.log
BUILD COMMANDS FOR: revcomp.gcj

Fri Sep 15 03:25:48 PDT 2006

/usr/bin/gcj -O3 -fomit-frame-pointer -funroll-loops -o revcomp.gcj_run --main=revcomp revcomp.java
revcomp.java:35: error: Missing identifier.
	private static void formatAndPrint(List<byte[]> lineBuffer) {
                                                  ^
revcomp.java:35: confused by earlier errors, bailing out
make[3]: [revcomp.gcj_run] Error 1 (ignored)
rm revcomp.java

=================================================================
COMMAND LINE (%A is single numeric argument):

revcomp.gcj_run %A
Error, could not exec revcomp.gcj_run 1 (No such file or directory)
PATH=/opt/shootout/shootout/bench/revcomp:/opt/shootout/shootout/bench/revcomp/tmp:/opt/IronPython/bin:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/home/brent/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
